[tool.poetry]
name = "upstash_ratelimit"
version = "0.3.4"
description = "Serverless ratelimiting package from Upstash"
authors = ["Zgîmbău Tudor <tudor.zgimbau@gmail.com>", "Upstash <support@upstash.com>"]
readme = "README.md"
packages = [{include = "upstash_ratelimit"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
upstash-redis = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
